# manifestless-live-stream

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  compose.yaml
apps/server/: Dockerfile  pyproject.toml
apps/server/src/manifestless_server/: __init__.py  __main__.py  app.py  certs.py  e2e_server.py  protocol.py
apps/server/src/manifestless_server/domain/: __init__.py  ingest.py  metrics.py  models.py  ring_buffer.py  viewer.py  watcher.py
apps/server/src/manifestless_server/transport/: __init__.py  webtransport.py
apps/server/tests/: test_api_phase5.py  test_domain_phase2.py  test_phase0.py  test_protocol_phase3.py  test_webtransport_phase4.py
apps/viewer/: Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json
apps/viewer/e2e/: manifestless.spec.ts  phase0.spec.ts
apps/viewer/src/: latencyController.ts  main.ts  mseController.ts  playerState.ts  protocol.ts  reorderBuffer.ts  styles.css  transportClient.ts  webtransport.d.ts
apps/viewer/tests/: latencyController.test.ts  (+6 more)
docs/: API.md  ARCHITECTURE.md  CODEX_RULES.md  DECISIONS.md  FEEDBACK_WORKFLOW.md  FIRST_RUN_TASK.md  INGEST.md  MEDIA.md  OPERATIONS.md  PLAYER.md  PROTOCOL.md  REQUIREMENTS.md  TASKS.md  TEST_PLAN.md  TEST_RESULTS.md
scripts/: dev-run.mjs  generate-cert.py  generate-cert.sh  open-viewer-browser.mjs  open-viewer-playwright.mjs  phase0-check.mjs  phase1-reconnect.mjs  phase1-smoke.mjs  start-segmenter.sh  start-test-stream.sh  stop-processes.mjs  stream-start.mjs  verify-segments.mjs  verify-segments.sh
