[project]
name = "manifestless-live-stream-server"
version = "0.1.0"
description = "Experimental manifestless live streaming server."
requires-python = ">=3.13"
dependencies = [
  "aioquic",
  "fastapi",
  "uvicorn",
]

[project.optional-dependencies]
dev = [
  "httpx2",
  "pytest-asyncio",
  "mypy",
  "pytest",
  "ruff",
]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.13"
strict = true
files = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
